CARRY: HACK: commit data/assets_vfsdata.go
This ensures we can vendor in assets directly and we don't need to generate
them separately in ARO code base.

--- a/data/data/install.openshift.io_installconfigs.yaml
+++ b/data/data/install.openshift.io_installconfigs.yaml
@@ -883,6 +883,10 @@ spec:
               azure:
                 description: Azure is the configuration used when installing on Azure.
                 properties:
+                  aro:
+                    description: ARO is a flag that indicates specialisations for
+                      the ARO platform
+                    type: boolean
                   baseDomainResourceGroupName:
                     description: BaseDomainResourceGroupName specifies the resource
                       group where the Azure DNS zone for the base domain is found.
@@ -942,6 +946,27 @@ spec:
                         items:
                           type: string
                         type: array
+                    type: object
+                  image:
+                    description: Image specifies the image parameters with which a
+                      cluster should be built
+                    properties:
+                      offer:
+                        description: Offer is the image offer
+                        type: string
+                      publisher:
+                        description: Publisher is the image publisher
+                        type: string
+                      resourceId:
+                        description: ResourceID is the resource ID of an existing
+                          Image resource
+                        type: string
+                      sku:
+                        description: SKU is the image SKU
+                        type: string
+                      version:
+                        description: Version is the image version
+                        type: string
                     type: object
                   networkResourceGroupName:
                     description: NetworkResourceGroupName specifies the network resource
